--- a/.travis.yml
+++ b/.travis.yml
@@ -1,54 +1,34 @@
-# Forces new Travis-CI Infrastructure
-sudo: false
-
 language: php
 
-env:
-  global:
-    - RUN_UNIT_TESTS="yes"
-    - INSTALL_MEMCACHE="yes"
-    - INSTALL_MEMCACHED="yes"
-    - INSTALL_REDIS="yes"
+sudo: required
+
+php:
+  - 5.6
+  - 7.0
 
 matrix:
   fast_finish: true
-  include:
-    - php: 7.0
-      env: INSTALL_APCU="yes" INSTALL_MEMCACHE="no"
-    - php: 7.1
-      env: INSTALL_APCU="yes" INSTALL_MEMCACHE="no"
-    # Requires older Precise image
-    - php: 5.3
-      env: INSTALL_APC="yes"
-      sudo: true
-      dist: precise
-    # The new Trusty image has issues with running APC, do not enable it here
-    - php: 5.4
-      env: INSTALL_APC="no"
-    - php: 5.5
-      env: INSTALL_APCU="yes"
-    - php: 5.6
-      env: INSTALL_APCU="yes"
-    - php: 7.2
-      env: INSTALL_APCU="yes" INSTALL_MEMCACHE="no"
-    - php: nightly
-      env: INSTALL_APCU="yes" INSTALL_MEMCACHE="no"
-  allow_failures:
-    - php: 7.2
-    - php: nightly
 
-services:
-  - memcache
-  - memcached
-  - redis-server
-
-before_script:
-  # Make sure all dev dependencies are installed
-  - if [[ $RUN_UNIT_TESTS == "yes" ]]; then bash build/travis/unit-tests.sh $PWD; fi
-
-script:
-  - if [[ $RUN_UNIT_TESTS == "yes" ]]; then libraries/vendor/bin/phpunit --configuration travisci-phpunit.xml; fi
+addons:
+  apt:
+    packages:
+      - google-chrome-stable # Use this package instead of chrome:stable addon. See: https://github.com/travis-ci/travis-ci/issues/7150#issuecomment-340297038
 
 branches:
-  except:
-    - 2.5.x
+  only:
+  - master
+  - staging
+
+before_install:
+- export PATH=$PATH:/home/travis/.config/composer/vendor/bin/
+- export DOCUMENTROOT=/tmp/www/
+- export PROJECT_DIR=$(dirname "$TRAVIS_BUILD_DIR")
+- chmod +x $TRAVIS_BUILD_DIR/scripts/travis/before_install.sh
+- $TRAVIS_BUILD_DIR/scripts/travis/before_install.sh
+
+script:
+- codecept run acceptance --env=travis
+
+env:
+  matrix:
+    - JOOMLA=3.8
